--- a/DomeOver/Base.lproj/Main.storyboard
+++ b/DomeOver/Base.lproj/Main.storyboard
@@ -44,5 +44,32 @@
             </objects>
             <point key="canvasLocation" x="130.43478260869566" y="115.84821428571428"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="dRR-v2-QWP">
+            <objects>
+                <viewController id="ov4-d9-Xln" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8Gj-Vo-tKq">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Big-Ku-Rdn">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="Big-Ku-Rdn" firstAttribute="leading" secondItem="TZl-er-crC" secondAttribute="leading" id="1sh-li-kcR"/>
+                            <constraint firstItem="Big-Ku-Rdn" firstAttribute="top" secondItem="TZl-er-crC" secondAttribute="top" id="DCo-PE-wOZ"/>
+                            <constraint firstItem="TZl-er-crC" firstAttribute="bottom" secondItem="Big-Ku-Rdn" secondAttribute="bottom" id="f12-aa-gko"/>
+                            <constraint firstItem="TZl-er-crC" firstAttribute="trailing" secondItem="Big-Ku-Rdn" secondAttribute="trailing" id="glb-OO-f6A"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="TZl-er-crC"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sQH-f4-h6F" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1228" y="116"/>
+        </scene>
     </scenes>
 </document>
